--- a/index.html
+++ b/index.html
@@ -1,1 +1,108 @@
-Hello Worlkd
+
+<HTML>
+<Head>
+<center><IMG SRC="aniplane.gif" width=200 height=20></center>
+<title>Lee's TV-Video Service</title>
+</Head>
+
+<body bgcolor=white>
+<center><H2><font color=blue><b>Lee's TV-Video Service</b> </font color> </H2>
+</center>
+
+<center><I><font color=#008f93>Servicing:</font></I>&nbsp &nbsp  <B> VCR * TV * BIG SCREEN</B></center>
+<br>
+<center>
+<img SRC="tvhome.gif"><BR>
+</center><br>
+<HR>
+<BR>
+
+<center>
+<table width=90% border=0>
+<TR>
+<TD width=60% >
+<I><B>  FACTORY AUTHORIZED SERVICE FOR:<B></I>
+</td>
+
+<td width=40% align=left > 
+  <A href="http://www.zenith.com" target=new> <IMG border=0 SRC="zlogo.gif"  width=160 height=42></A><br>
+</td>
+</tr>
+</table>
+</center><BR>
+
+
+<CENTER>
+<TABLE WIDTH=90% BORDER=0>
+<TR>
+<TD VALIGN=top WIDTH=60% bgcolor="#e6e6e6">
+<BR>
+<center>
+<font size=4><font color=orange> <B>Also we have<BR>
+<U>On site trained technicians for:</U></B><br></font>
+<BR></center>
+
+<center> 
+<TABLE width=70% >
+<TR>
+<TD>   
+<UL>
+<font color=blue><B><LI>Mitsubishi<br>
+<LI>Sony<br>
+<LI>Toshiba<br>
+<LI>RCA/GE<br>
+<LI>Hitachi<Br>
+<LI>Sanyo/Fisher<br>
+<LI>Philips<br>
+<LI>NEC<br>
+<LI>JVC<BR>
+<LI>Panasonic<br>
+<LI>Magnavox<br>
+<LI>Most Major Brands</B></font>
+</UL>
+</Td>
+
+</TD>
+</TR>
+</TABLE>
+</center>
+
+<TD align=center>
+&nbsp&nbsp  <IMG src="tv27.gif" width=80 height=110 >
+<BR><BR>
+
+<IMG SRC="vcr.gif"> <br><BR>
+&nbsp &nbsp &nbsp <IMG SRC="bigscreen.gif" width=100 height=120>
+
+</TD>
+</TR>
+</TABLE>
+</CENTER><br><br>
+
+<HR><br>
+
+<B><font color=red>Serving :</font>
+ <font color=green> Thousand Oaks, Westlake Village,  
+Newbury Park, Agoura, and Simi Valley.<BR><br>
+
+<table width=100% border=0>
+<tr>
+ <td width=60%>
+<!--
+<font color=red><B> Our</font></B><B><A href="ltvmap.html"> Location :</A><br></b><br>
+<font size=-1>&nbsp &nbsp &nbsp&nbsp &nbsp  1779 E. Thousand Oaks Blvd.<br>
+&nbsp &nbsp &nbsp &nbsp &nbsp Thousand Oaks,&nbsp  CA  91362<br></font>
+-->
+
+ </td>
+ <td width=40%  ><B><font color=red>FAQ</font></B><br>
+  <A href="crt.html"><font size=-1>What is High Resolution CRT? <br>
+  <A href="scan.html">What is Scan Velocity Modulation?<br>
+  <A href="screen.html">What is Lenticular Screen?</font></B> 
+ </td>
+</tr>
+</table>
+
+
+</body>
+</HTML>
